# KK_project

./: CMakeLists.txt  DeadCodeElimination.cpp  InstCombine.cpp  README.md
DCE/: DeadCodeElimination.cpp  run_dce_tests.sh
DCE/tests/: test2.ll  test3.ll
DCE/tests_out/: test1_out.ll  test2_out.ll  test3_out.ll
DSE/: CMakeLists.txt  DSE.cpp
DSE/primeri/: primer1.c  primer1.ll  primer1_opt.ll  primer2.c  primer2.ll  primer2_opt.ll  primer3.c  primer3.ll  primer3_opt.ll
InstCombine/: InstCombine.cpp  run_instcom_tests.sh
InstCombine/tests/: test2.ll
InstCombine/tests_out/: test1_out.ll  test2_out.ll  test3_out.ll
tests/: test1.ll  test1_instcom.ll  test3_instcom.ll
